// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tooltip should render correctly with component in content prop 1`] = `
<DocumentFragment>
  .cache-1hzk1lh-StyledChildrenContainer {
  display: inherit;
}

.cache-1hzk1lh-StyledChildrenContainer[data-container-full-width='true'] {
  width: 100%;
}

<div
    aria-describedby=":r5:"
    class="cache-1hzk1lh-StyledChildrenContainer efkq4700"
    tabindex="0"
  >
    Children
  </div>
</DocumentFragment>
`;

exports[`Tooltip should render correctly with placement should renders tooltip with placement bottom 1`] = `
<DocumentFragment>
  .cache-1hzk1lh-StyledChildrenContainer {
  display: inherit;
}

.cache-1hzk1lh-StyledChildrenContainer[data-container-full-width='true'] {
  width: 100%;
}

<div
    aria-describedby=":rk:"
    class="cache-1hzk1lh-StyledChildrenContainer efkq4700"
    tabindex="0"
  >
    <p
      data-testid="children"
    >
      Children
    </p>
  </div>
</DocumentFragment>
`;

exports[`Tooltip should render correctly with placement should renders tooltip with placement left 1`] = `
<DocumentFragment>
  .cache-1hzk1lh-StyledChildrenContainer {
  display: inherit;
}

.cache-1hzk1lh-StyledChildrenContainer[data-container-full-width='true'] {
  width: 100%;
}

<div
    aria-describedby=":rc:"
    class="cache-1hzk1lh-StyledChildrenContainer efkq4700"
    tabindex="0"
  >
    <p
      data-testid="children"
    >
      Children
    </p>
  </div>
</DocumentFragment>
`;

exports[`Tooltip should render correctly with placement should renders tooltip with placement right 1`] = `
<DocumentFragment>
  .cache-1hzk1lh-StyledChildrenContainer {
  display: inherit;
}

.cache-1hzk1lh-StyledChildrenContainer[data-container-full-width='true'] {
  width: 100%;
}

<div
    aria-describedby=":rg:"
    class="cache-1hzk1lh-StyledChildrenContainer efkq4700"
    tabindex="0"
  >
    <p
      data-testid="children"
    >
      Children
    </p>
  </div>
</DocumentFragment>
`;

exports[`Tooltip should render correctly with placement should renders tooltip with placement top 1`] = `
<DocumentFragment>
  .cache-1hzk1lh-StyledChildrenContainer {
  display: inherit;
}

.cache-1hzk1lh-StyledChildrenContainer[data-container-full-width='true'] {
  width: 100%;
}

<div
    aria-describedby=":r8:"
    class="cache-1hzk1lh-StyledChildrenContainer efkq4700"
    tabindex="0"
  >
    <p
      data-testid="children"
    >
      Children
    </p>
  </div>
</DocumentFragment>
`;

exports[`Tooltip should render correctly with required props 1`] = `
<DocumentFragment>
  .cache-1hzk1lh-StyledChildrenContainer {
  display: inherit;
}

.cache-1hzk1lh-StyledChildrenContainer[data-container-full-width='true'] {
  width: 100%;
}

<div
    aria-describedby=":r0:"
    class="cache-1hzk1lh-StyledChildrenContainer efkq4700"
    tabindex="0"
  >
    Children
  </div>
</DocumentFragment>
`;

exports[`Tooltip should render correctly with required props and visible 1`] = `
<DocumentFragment>
  .cache-1hzk1lh-StyledChildrenContainer {
  display: inherit;
}

.cache-1hzk1lh-StyledChildrenContainer[data-container-full-width='true'] {
  width: 100%;
}

<div
    aria-describedby=":r1:"
    class="cache-1hzk1lh-StyledChildrenContainer efkq4700"
    tabindex="0"
  >
    Children
  </div>
</DocumentFragment>
`;

exports[`Tooltip should render correctly with sentiment should renders tooltip with placement neutral 1`] = `
<DocumentFragment>
  .cache-1hzk1lh-StyledChildrenContainer {
  display: inherit;
}

.cache-1hzk1lh-StyledChildrenContainer[data-container-full-width='true'] {
  width: 100%;
}

<div
    aria-describedby=":ro:"
    class="cache-1hzk1lh-StyledChildrenContainer efkq4700"
    tabindex="0"
  >
    <p
      data-testid="children"
    >
      Children
    </p>
  </div>
</DocumentFragment>
`;

exports[`Tooltip should render correctly with sentiment should renders tooltip with placement primary 1`] = `
<DocumentFragment>
  .cache-1hzk1lh-StyledChildrenContainer {
  display: inherit;
}

.cache-1hzk1lh-StyledChildrenContainer[data-container-full-width='true'] {
  width: 100%;
}

<div
    aria-describedby=":rs:"
    class="cache-1hzk1lh-StyledChildrenContainer efkq4700"
    tabindex="0"
  >
    <p
      data-testid="children"
    >
      Children
    </p>
  </div>
</DocumentFragment>
`;

exports[`Tooltip should render correctly with sizes should renders tooltip with placement large 1`] = `
<DocumentFragment>
  .cache-1hzk1lh-StyledChildrenContainer {
  display: inherit;
}

.cache-1hzk1lh-StyledChildrenContainer[data-container-full-width='true'] {
  width: 100%;
}

<div
    aria-describedby=":r18:"
    class="cache-1hzk1lh-StyledChildrenContainer efkq4700"
    tabindex="0"
  >
    <p
      data-testid="children"
    >
      Children
    </p>
  </div>
</DocumentFragment>
`;

exports[`Tooltip should render correctly with sizes should renders tooltip with placement medium 1`] = `
<DocumentFragment>
  .cache-1hzk1lh-StyledChildrenContainer {
  display: inherit;
}

.cache-1hzk1lh-StyledChildrenContainer[data-container-full-width='true'] {
  width: 100%;
}

<div
    aria-describedby=":r14:"
    class="cache-1hzk1lh-StyledChildrenContainer efkq4700"
    tabindex="0"
  >
    <p
      data-testid="children"
    >
      Children
    </p>
  </div>
</DocumentFragment>
`;

exports[`Tooltip should render correctly with sizes should renders tooltip with placement small 1`] = `
<DocumentFragment>
  .cache-1hzk1lh-StyledChildrenContainer {
  display: inherit;
}

.cache-1hzk1lh-StyledChildrenContainer[data-container-full-width='true'] {
  width: 100%;
}

<div
    aria-describedby=":r10:"
    class="cache-1hzk1lh-StyledChildrenContainer efkq4700"
    tabindex="0"
  >
    <p
      data-testid="children"
    >
      Children
    </p>
  </div>
</DocumentFragment>
`;
